--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
-	"owner": ["6282387804410@s.whatsapp.net"],
+	"owner": ["6287892711054@s.whatsapp.net"],
 	"thumbvideo": "https://uploader.caliph.my.id/file/hU0F0HZ9K4.mp4",
 	"thumb": "https://telegra.ph/file/d8dba7eee759ff82b35be.jpg",
 	"session": "rzkyfdlh-md.json",
-	"ownername": "Rizky",
+	"ownername": "Hyzer",
 	"self": false,
 	"server": false,
 	"comment_server": "change 'server' with 'true', if you run in replit!",
 	"limit": { "limitUser": 30, "gameLimitUser": 10, "gameLimitPremium": 30 },
-	"packInfo": { "packname": "@rizkyfadilah8", "author": "6282387804410" },
-	"namebot": "KurumiBot",
+	"packInfo": { "packname": "HyzerDev", "author": "6287892711054" },
+	"namebot": "Anya Forger",
 	"timezone": "Asia/Jakarta",
-	"email": "admin@rzkyfdlh.tech",
-	"instagram": "https://instagram.com/rizkyfadilah8_",
+	"email": "hyzerofficial86@gmail.com",
+	"instagram": "https://instagram.com/zexyds_",
 	"locale": "id",
 	"ignore": {
 		"directory": ["umum"]
