--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"owner": ["6287892711054@s.whatsapp.net"],
-	"thumbvideo": "https://uploader.caliph.my.id/file/hU0F0HZ9K4.mp4",
+	"thumbvideo": "https://telegra.ph/file/51aa9701839dcc29066e9.mp4",
 	"thumb": "https://telegra.ph/file/d8dba7eee759ff82b35be.jpg",
 	"session": "rzkyfdlh-md.json",
 	"ownername": "Hyzer",
@@ -9,7 +9,7 @@
 	"comment_server": "change 'server' with 'true', if you run in replit!",
 	"limit": { "limitUser": 30, "gameLimitUser": 10, "gameLimitPremium": 30 },
 	"packInfo": { "packname": "HyzerDev", "author": "6287892711054" },
-	"namebot": "Anya Forger",
+	"namebot": "Shikimori Bot",
 	"timezone": "Asia/Jakarta",
 	"email": "hyzerofficial86@gmail.com",
 	"instagram": "https://instagram.com/zexyds_",
