--- a/config.json
+++ b/config.json
@@ -1,18 +1,18 @@
 {
-	"owner": ["6287892711054@s.whatsapp.net"],
+	"owner": ["6289516947204@s.whatsapp.net"],
 	"thumbvideo": "https://telegra.ph/file/51aa9701839dcc29066e9.mp4",
 	"thumb": "https://telegra.ph/file/d8dba7eee759ff82b35be.jpg",
 	"session": "rzkyfdlh-md.json",
-	"ownername": "Hyzer",
+	"ownername": "𝚒𝚢𝚊𝚗Ⓒ︎",
 	"self": false,
 	"server": false,
 	"comment_server": "change 'server' with 'true', if you run in replit!",
-	"limit": { "limitUser": 30, "gameLimitUser": 10, "gameLimitPremium": 30 },
-	"packInfo": { "packname": "HyzerDev", "author": "6287892711054" },
-	"namebot": "Shikimori Bot",
+	"limit": { "limitUser": 50, "gameLimitUser": 20, "gameLimitPremium": 60 },
+	"packInfo": { "packname": "𝚒𝚢𝚊𝚗Ⓒ︎", "author": "6289516947204" },
+	"namebot": "𝚁𝙲𝚃𝙸 𝙱𝙾𝚃",
 	"timezone": "Asia/Jakarta",
-	"email": "hyzerofficial86@gmail.com",
-	"instagram": "https://instagram.com/zexyds_",
+	"email": "https://saweria.co/IyanMd",
+	"instagram": "https://saweria.co/IyanMd",
 	"locale": "id",
 	"ignore": {
 		"directory": ["umum"]
