--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rzky-multidevice",
+  "name": "Iyan-multidevice",
   "version": "4.0.0",
   "main": "index.js",
   "depecrated": false,
